deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: minecraft-bedrock
  name: minecraft-bedrock
spec:
  # never more than 1 since BDS is not horizontally scalable
  replicas: 1
  serviceName: minecraft-bedrock
  selector:
    matchLabels:
      app: minecraft-bedrock
  template:
    metadata:
      labels:
        app: minecraft-bedrock
    spec:
      containers:
        - name: main
          image: itzg/minecraft-bedrock-server
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: data
          ports:
            - containerPort: 19132
              protocol: UDP
          readinessProbe: &probe
            exec:
              command:
                - mc-monitor
                - status-bedrock
                - --host
                # force health check against IPv4 port
                - 127.0.0.1
            initialDelaySeconds: 30
          livenessProbe: *probe
          tty: true
          stdin: true
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-bedrock
spec:
  selector:
    app: minecraft-bedrock
  ports:
    - port: 19132
      protocol: UDP
  # ipFamily: IPv4
  # Use LoadBalancer if running on a provider that supports that
  # type: LoadBalancer
  # or use NodePort on a non-managed system;
  # however, you'll need to lookup port assigned to the service
  type: NodePort
